Fix overflow style

--- a/src/Dail.WebUI/ClientApp/src/app/pages/time-schedules/assigner/assigner.component.scss
+++ b/src/Dail.WebUI/ClientApp/src/app/pages/time-schedules/assigner/assigner.component.scss
@@ -17,4 +17,5 @@
     height: 65px;
     padding : 8px; 
     cursor: default;
+    overflow-y: hidden;
 }
